fix(messenger): fixed messages overflow

--- a/packages/core/src/components/lf-messenger/style.chat.scss
+++ b/packages/core/src/components/lf-messenger/style.chat.scss
@@ -26,5 +26,6 @@
 
   &__chat {
     grid-area: chat;
+    overflow: auto;
   }
 }
